tests/type-errors/no_side_effect_in_function1.arl
archetype no_side_effect_in_function1

variable res : nat = 0

function f () : nat {
  res := 0;
  return 1
}

entry exec () {
  var a = f()
}
